add openvsp example

--- a/docker/aerodesign.ipynb
+++ b/docker/aerodesign.ipynb
@@ -12595,17 +12595,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 119,
+   "execution_count": 1,
    "id": "6af8338f-1a1f-4748-bfdc-e4138ce30a89",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "'PFHVMGFKWM'"
+       "'AULNRSFHCL'"
       ]
      },
-     "execution_count": 119,
+     "execution_count": 1,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -12629,19 +12629,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 120,
+   "execution_count": 16,
    "id": "3e3af440-cdc0-4cb3-81f6-8da4dd78d086",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "2dea47e0a6244d0e991c2e8da0cc6666",
+       "model_id": "a1200a005fbe4ce785fcc15a983175a7",
        "version_major": 2,
        "version_minor": 0
       },
       "text/plain": [
-       "VBox(children=(HTML(value='Green point at (0.000, 0.000, 0.000)'), Renderer(camera=PerspectiveCamera(aspect=1.…"
+       "VBox(children=(HTML(value='Point at (0.000, 0.000, 0.000)'), Renderer(camera=PerspectiveCamera(aspect=1.333333…"
       ]
      },
      "metadata": {},
@@ -12650,6 +12650,8 @@
    ],
    "source": [
     "from stl import mesh\n",
+    "from pythreejs import *\n",
+    "from ipywidgets import HTML, Text, Output, VBox\n",
     "import math\n",
     "\n",
     "# find the max dimensions, so we can know the bounding box, getting the height,\n",
@@ -12672,7 +12674,7 @@
     "vertices = BufferAttribute(array=stlmesh.vectors, normalized=False)\n",
     "geometry = BufferGeometry( attributes={'position': vertices}, )\n",
     "\n",
-    "material = MeshLambertMaterial(map=height_texture(z[::-1], 'YlGnBu_r'), wireframe=True,transparent=True, opacity=0.5)\n",
+    "material = MeshLambertMaterial(color='lightsteelblue', wireframe=True,transparent=True, opacity=0.5)\n",
     "surf = Mesh(geometry=geometry,\n",
     "           material=material,\n",
     "           position=[-40, 0, 0])\n",
@@ -12714,7 +12716,7 @@
     "# Show picker point coordinates as a label:\n",
     "h = HTML()\n",
     "def g(change):\n",
-    "    h.value = 'Green point at (%.3f, %.3f, %.3f)' % tuple(change['new'])\n",
+    "    h.value = 'Point at (%.3f, %.3f, %.3f)' % tuple(change['new'])\n",
     "g({'new': hover_point.position})\n",
     "hover_picker.observe(g, names=['point'])\n",
     "\n",
@@ -12723,7 +12725,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 4,
    "id": "3ba2844d-fcdd-4040-bc07-f346b9f19285",
    "metadata": {},
    "outputs": [
