add more python packages

--- a/docker/aerodesign.ipynb
+++ b/docker/aerodesign.ipynb
@@ -431,7 +431,27 @@
    "id": "69922da1-0efb-4aee-8a54-63842c681af2",
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "import openvsp as vsp\n",
+    "from enum import Enum\n",
+    "from functools import partial\n",
+    "Enum0 = partial(Enum, start=0)\n",
+    "FEA_EXPORT_TYPE = Enum0('FEA_EXPORT_TYPE', 'FEA_MASS_FILE_NAME FEA_NASTRAN_FILE_NAME FEA_NKEY_FILE_NAME FEA_CALCULIX_FILE_NAME ' +\n",
+    "                   'FEA_STL_FILE_NAME FEA_GMSH_FILE_NAME FEA_SRF_FILE_NAME FEA_CURV_FILE_NAME FEA_PLOT3D_FILE_NAME ' +\n",
+    "                   'FEA_IGES_FILE_NAME FEA_STEP_FILE_NAME FEA_NUM_FILE_NAMES')\n",
+    "# Add Pod Geometry\n",
+    "pod_id = vsp.AddGeom(\"POD\")\n",
+    "# Add FeaStructure to Pod\n",
+    "struct_ind = vsp.AddFeaStruct( pod_id )\n",
+    "struct_id = vsp.GetFeaStructID( pod_id, struct_ind )\n",
+    "# Generate FEA Mesh and Export\n",
+    "print(\"--> Generating FeaMesh \")\n",
+    "# Get Parent Geom ID and Index\n",
+    "parent_id = vsp.GetFeaStructParentGeomID( struct_id )\n",
+    "export_name = 'apitest_FEAMesh_calculix.dat'\n",
+    "vsp.SetFeaMeshFileName( pod_id, struct_ind, FEA_EXPORT_TYPE.FEA_CALCULIX_FILE_NAME.value, export_name )\n",
+    "vsp.ComputeFeaMesh( parent_id, struct_ind, FEA_EXPORT_TYPE.FEA_CALCULIX_FILE_NAME.value )"
+   ]
   }
  ],
  "metadata": {
